CSS fixes
Hamburger menu positioning fixed to get rid of the small gap between the menu and sticky div.

--- a/portfolio/styleportfolio.css
+++ b/portfolio/styleportfolio.css
@@ -73,7 +73,7 @@ html,body {
 
 .HamburgerToggle{
     position: fixed;
-    top:20%;
+    top:19%;
     height:100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.85);
